--- a/rainbowShoreSidebar.css
+++ b/rainbowShoreSidebar.css
@@ -13,6 +13,9 @@
     background-color: #007bd2;
     background-repeat: no-repeat
     }
+#sb_side::after {
+  content:none !important;
+}
 #sb_edge {
     background-image: url(https://sig.grumpybumpers.com/host/twiggies_neopets.gif), url(https://i.imgur.com/g517aY7.png) !important;
     height: 242px !important;
@@ -24,6 +27,7 @@
     border-radius: 0 0 13px 0 !important;
     display:block !important;
     }
+
 #sb_createpet, #sb_petcentral, #sb_explore, #sb_games, #sb_neomail, #sb_shops, #sb_boards, #sb_news, #sb_stuff, #sb_help, #sb_login, #sb_logout {
     background-image: url(https://i.imgur.com/JSmVvql.png);
     width: 130px
