--- a/userLookupHas.css
+++ b/userLookupHas.css
@@ -1,26 +1,19 @@
-/* Tooltip stuff */
-/* #galleryContent:has(> #gallery_items > .gallery_item > img:hover) > #galleryDesc > #galleryTooltip{
-  
-    visibility: visible;
-    opacity: 1;
-} */
-
-#galleryContent:has(> #gallery_items > .gallery_item > img:is([src="https://grundoscafe.b-cdn.net/items/isl_petpet16.gif"],[src="https://grundoscafe.b-cdn.net/items/vor_eyefish.gif"],[src="https://grundoscafe.b-cdn.net/items/pet_peadackle.gif"],[src="https://grundoscafe.b-cdn.net/items/isl_petpet1.gif"]):hover) > #galleryDesc > #galleryTooltip
+#userLookupContent:has(> #userLookupPets  div:is(.ul--petsheader,.Sharpeye__after,.Degg__after):hover) > #userLookupDesc >  #lookupTooltip
 {
-  
-    visibility: visible;
+    visibility: visible !important;
     opacity: 1;
 }
 
-#galleryContent:has(> #gallery_items > .gallery_item > img[src="https://grundoscafe.b-cdn.net/items/isl_petpet16.gif"]:hover) > #galleryDesc > #galleryTooltip:after{
-    content: 'This cute little critter and its likeness to bluemaroos has spawned many debates about whether all neopets evolved from life in the sea.'
+#userLookupContent:has(> #userLookupPets .Degg__after:hover) > #userLookupDesc >  #lookupTooltip:after
+{
+    content: "Pirates description here."
 }
 
-#galleryContent:has(> #gallery_items > .gallery_item > img[src="https://grundoscafe.b-cdn.net/items/vor_eyefish.gif"]:hover) > #galleryDesc > #galleryTooltip:after{
-    content: 'Despite what some might say, the eye is quite delicious!'
+#userLookupContent:has(> #userLookupPets .Sharpeye__after:hover) > #userLookupDesc >  #lookupTooltip:after
+{
+    content: "The royal maraquan emissaries bla bla bla."
 }
-
-#galleryContent:has(> #gallery_items > .gallery_item > img[src="https://grundoscafe.b-cdn.net/items/pet_peadackle.gif"]:hover) > #galleryDesc > #galleryTooltip:after{
-    content: 'Please don\' ask if it tastes like chicken or fish. Please don\'t eat our petpets.'
+#userLookupContent:has(> #userLookupPets .ul--petsheader:hover) > #userLookupDesc >  #lookupTooltip:after
+{
+    content: "Residesnts of the Rainbow Tides Isle."
 }
-
